Changes for App sync

--- a/wp-content/themes/walnut/walnut/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut/dev/css/style.css
@@ -8066,3 +8066,9 @@ ul.my-friends li .profile-pic{
 .rickshaw_graph{
 	overflow:hidden;
 }
+
+
+/***App styles***/
+#teacherOptns .tab-content{
+	overflow:visible;
+}
