--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -36,8 +36,8 @@
               <!--<div class="checkbox checkbox check-success"> 
                 <input type="checkbox" id="checkbox1" value="1">
                 <label for="checkbox1">Remember Me</label>
-              </div>-->
-              <a href="#">Trouble logging in?</a>
+              </div>
+              <a href="#">Trouble logging in?</a>-->
 
               <p class=" m-b-5 bold">Login Type</p>
               <div class="radio radio-success">
