content piece saving with meta content excerpt

--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
@@ -7,7 +7,7 @@
 
             <div class="col-sm-8">
 
-                <button type="button" id="pause-session" class="btn btn-white  action pull-right m-t-5 m-l-20"><i class="fa fa-pause"></i> Pause</button>
+                {{&showPauseButton}}
 
                 <div class="modProgress pull-right">
                     <p class="bold small-text m-t-10 m-b-5">Progress</p>
