--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
@@ -1,11 +1,13 @@
 <div class="col-md-3">
 </div>
 <div class="col-md-6">
-
+<a href="#sync" style="width:100%;height:20px;">Sync Now</a>
     <ul class="nav nav-tabs" id="teacherOptns">
         <li class="active"><a href="#takeClass">Take a Class</a></li>
         <li class=""><a href="#training">Start Training</a></li>
         <li class=""><a href="#progress">Class Progress</a></li>
+        <li class=""><a href="#appsync">Sync now</a></li>
+
     </ul>
 
     <div class="tab-content">
