App Sync updated 20-05-2014

--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -17,7 +17,7 @@
                       <div class="col-sm-6 b-grey ">
                         <h4 class="semi-bold text-center b-grey b-b no-margin p-t-20 p-b-10">Records to be synced</h4>
                         <div class="b-grey b-b">
-                          <h2 class="m-b-0 semi-bold text-center text-error animate-number" data-value="423" data-animation-duration="1000">423</h2>
+                          <h2 id="SyncRecords" class="m-b-0 semi-bold text-center text-error animate-number" data-value="423" data-animation-duration="1000"></h2>
                           <h5 class="m-t-0 text-center text-error">records</h5>
                         </div>
                       </div>
