--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -26,6 +26,7 @@
 
                     <div class="row m-t-25">
                       <div class="col-sm-12">
+                        <button id="JsonToCSV" type="button" class="btn btn-primary btn-block"> Generate file</button>
                         <button id="syncNow" type="button" class="btn btn-primary btn-block"> Sync Now</button>
 
                         <div class="alert alert-info text-center m-t-10">
