--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display.html
@@ -17,7 +17,7 @@
         <div class="tiles white added-margin">
             <div class="tiles-body">
                 <div class="tiles-title"> ELAPSED MODULE TIME </div>
-                <div class="heading"> <span class="animate-number" data-animation-duration="1200">{{showElapsedTime}} mins</span> </div>
+                <div class="heading"> <span class="animate-number" data-animation-duration="1200">{{showElapsedTime}}</span> </div>
             </div>
         </div>
 
