Changes in login and added menus

--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -38,7 +38,7 @@
                 <label for="checkbox1">Remember Me</label>
               </div>
               <a href="#">Trouble logging in?</a>-->
-
+              <p id="connectionStatus" class=" m-b-5 bold">Connection Status</p>
               <p class=" m-b-5 bold">Login Type</p>
               <div class="radio radio-success">
                 <input id="online" type="radio" name="optionyes" value="online">
