tags span added select2 null options changed

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -21,7 +21,7 @@
                     </select>
                 </div>
                 <div class="col-sm-4">
-                    <label class="form-label">Tags</label>
+                    <label class="form-label">Tags <span class="muted small pull-right"> Enter tags for question</span></label>
                     <input name="post_tags" type="text" data-role="tagsinput" value="{{post_tags}}" class="tagsinput" placeholder="Type Answer and press Enter" />
                 </div>
             </div>
