content selection and view filters

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-selection/templates/content-selection.html
@@ -33,6 +33,7 @@
 								<option value="">Select Sub Sections</option>
 						</select>
                         <select class="content-type-filter" id="content-type-filter" style="width:200px">
+                            <option value="">All</option>
                             <option value="teacher_question">Teacher Question</option>
                             <option value="content_piece">Content Piece</option>
                         </select>
