add training module issues

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-display/templates/content-display.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-display/templates/content-display.html
@@ -1,7 +1,7 @@
 
 <div class="contentPiece" data-id="{{ID}}">
 	<time class="cbp_tmtime" datetime="">
-	    <span class="time">15 <span class="semi-bold">mins</span></span>
+	    <span class="time">{{duration}} <span class="semi-bold">mins</span></span>
 	</time>
 	<div class="cbp_tmicon primary animated bounceIn"> <i class="fa fa-question"></i> </div>
 	<div class="cbp_tmlabel">
@@ -11,7 +11,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="tiles grey p-t-10 p-b-10 p-l-20">
-		   	<div class="muted">Tag one, Tag two, Tag three</div>
+		   	<div class="muted">{{post_tags}}</div>
 		  	<div class="clearfix"></div>
 		</div>
 	</div>
