uncommitted changes for mobile select box testing

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -3,7 +3,7 @@
 @import "mixins.less";
 @import "fonts.less";
 @import "builder.less";
-@import "mashmenu.less";
+//@import "mashmenu.less";
 @import "checkbox.less";
 @import "fib.less";
 @import "mcq.less";
@@ -11,7 +11,7 @@
 @import "single-question.less";
 @import "textbook.less";
 @import "chapters.less";
-@import "class.less";
+//@import "class.less";
 @import "training.less";
 @import "module.less";
 @import "teacher.less";
@@ -93,46 +93,46 @@ tbody.rowlink{
 	padding: 10px 18px 5px 24px;
 }
 
-.mashmenu .mod .mod-content,.mashmenu .menu .sub-content{border-bottom-color:@color-info}
-.mashmenu .mod:hover a,.mashmenu .menu li.level0:hover>a,.mashmenu .menu .sub-channel li a,.mashmenu .menu li.level0:hover .sub-channel li.hover a .fa-chevron-right,.mashmenu .columns .list a{color:#2AA4CF}
-.mashmenu .mod .mod-content,.mashmenu .mod:hover,.mashmenu .menu li.level0:hover>a,.mashmenu .menu li.level0:hover .sub-channel li.hover a{background-color:@color-white}
-.mashmenu .mlogo:hover{background:none}
-.mashmenu .sub-channel{background-color:#C7E6F5}
+// .mashmenu .mod .mod-content,.mashmenu .menu .sub-content{border-bottom-color:@color-info}
+// .mashmenu .mod:hover a,.mashmenu .menu li.level0:hover>a,.mashmenu .menu .sub-channel li a,.mashmenu .menu li.level0:hover .sub-channel li.hover a .fa-chevron-right,.mashmenu .columns .list a{color:#2AA4CF}
+// .mashmenu .mod .mod-content,.mashmenu .mod:hover,.mashmenu .menu li.level0:hover>a,.mashmenu .menu li.level0:hover .sub-channel li.hover a{background-color:@color-white}
+// .mashmenu .mlogo:hover{background:none}
+// .mashmenu .sub-channel{background-color:#C7E6F5}
 
-.mashmenu{
-	position: relative;
-	z-index: 1;
-	margin-bottom: 25px;
-	//background: @color-green;
-	background: @color-info;
+// .mashmenu{
+// 	position: relative;
+// 	z-index: 1;
+// 	margin-bottom: 25px;
+// 	//background: @color-green;
+// 	background: @color-info;
 
-	div.mlogo{
-		margin-left: 10px;
-	}
+// 	div.mlogo{
+// 		margin-left: 10px;
+// 	}
 
-	.menu{
-		.sub-content{
-			background-color: @color-white;
-			padding: 20px;
+// 	.menu{
+// 		.sub-content{
+// 			background-color: @color-white;
+// 			padding: 20px;
 
-		}
-	}
+// 		}
+// 	}
 
-	.wrapper{
-		width: auto;
-		min-height: 400px;
-	}
+// 	.wrapper{
+// 		width: auto;
+// 		min-height: 400px;
+// 	}
 
-	.filters{
-		select{
-			width: 30%;
-			margin-right: 5px;
-		}
-		.table-tools-actions {
-			margin: 0;
-			}
-	}
-}
+// 	.filters{
+// 		select{
+// 			width: 30%;
+// 			margin-right: 5px;
+// 		}
+// 		.table-tools-actions {
+// 			margin: 0;
+// 			}
+// 	}
+// }
 
 @media(max-width:767px){
 	.login-container{
