--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -751,143 +751,21 @@
 .cke_dialog_body a.cke_dialog_ui_button_ok:hover {
   background: #006ea6;
 }
-/*div.Dmenu {
-    background: none repeat scroll 0 0 @color-info;
-    //border-bottom: 1px solid #DCE5EE;
-    //border-top: 1px solid #DCE5EE;
-    font-size: 13px;
-    margin-bottom: 15px;
-    padding-left: 1px;
-    position: relative;
-    width: 100%;
-    z-index: 1;
-    height:40px;
-    a {
-        text-decoration:none;
-    }
-    ul{
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: inline-block;
-        vertical-align: top;
-    }
-    li.mainCat {
-        border-left:2px solid transparent;
-        border-right:2px solid transparent;
-        border-top:4px solid transparent;
-        float:left;
-        transition: all 0.1s ease 0s;
-        div.allContent {
-            background-color:@preview-grey;
-            //border:2px solid #DDF0F9;
-            box-shadow:0 2px 3px rgba(0, 0, 0, 0.3);
-            display:block;
-            max-height:350px;
-            position:absolute;
-            top:38px;
-            left: 0;
-            width:100%;
-            z-index:-1;
-            border-radius: 0 0 3px 3px;
-            div.menuItems {
-                float:left;
-                width:100%;
-                margin:0px 0 1px 0;
-                color:#000;
-            }
-            a.slink {
-                border-top:1px solid #cddae9;
-                color:#40668c;
-                display:block;
-                font-weight:700;
-                margin:0 0 0 1px;
-                padding:10px;
-            }
-            a.slink:hover {
-                background-color: #DDF0F9;
-                color: #2AA4CF;
-                padding-right: 10px;
-                margin-right: -1px;
-            }
-        }
-        & > a:before {
-            border-left: 4px solid transparent;
-            border-right: 4px solid transparent;
-            border-top: 4px solid #A8BACD;
-            content: "";
-            height: 0;
-            position: absolute;
-            right: 6px;
-            top: 17px;
-            width: 0;
-        }
-        & > a:hover:before {
-            border-top-color: #40668C;
-        }
-        a.flink {
-            color: #fff;
-            display: block;
-            font-weight: 700;
-            height: 36px;
-            line-height: 36px;
-            padding-left: 10px;
-            padding-right: 18px;
-            position: relative;
-        }
-        div.snav:hover {
-            div.menuItems {
-                //border-left:1px solid #DDF0F9;
-                height:100%;
-                //padding-left:10px;
-            }
-        }
-        div.snavM {
-            background:#DDF0F9;
-            float:left;
-            margin-bottom:1px;
-            //margin-top:1px;
-            width:150px;
-            height:350px;
-            border-right:1px solid #dde5ef;
-        }
-        div.menuItems {
-            .inside {
-                border-bottom: 1px solid #DCE5EE;
-                padding: 10px 0;
-                margin-left:5px;
-                margin-right:5px;
-                float:left;
-                img {
-                    padding-right:10px;
-                    width:200px;
-                }
-                p {
-                    color: #333;
-                    font-size: 14px;
-                    transition: all 0.2s ease 0s;
-                    width:200px;
-                }
-            }
-            .noCont {
-                padding:5px;
-                font-weight:700;
-                color:#333;
-            }
-        }
-    }
-    li.mainCat:hover {
-        background:none repeat scroll 0 0 @color-white;
-        a {
-            color:#2AA4CF;
-        }
-    }
-    
-}*/
+/*Properties Bar*/
 #subProps {
+  background-color: #0090d9;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+}
+#subProps > li > a {
+  color: #f3f3f3;
+}
+#subProps > li > a:hover {
+  color: #ffffff;
+}
+#subProps > li.active > a {
+  color: #1b1e24;
 }
 /*input[type=checkbox].mcq-option-select {
 	display:none;
@@ -1568,53 +1446,6 @@ tbody.rowlink td {
 }
 .tiles-head {
   padding: 10px 18px 5px 24px;
-}
-.mashmenu .mod .mod-content,
-.mashmenu .menu .sub-content {
-  border-bottom-color: #0090d9;
-}
-.mashmenu .mod:hover a,
-.mashmenu .menu li.level0:hover > a,
-.mashmenu .menu .sub-channel li a,
-.mashmenu .menu li.level0:hover .sub-channel li.hover a .fa-chevron-right,
-.mashmenu .columns .list a {
-  color: #2aa4cf;
-}
-.mashmenu .mod .mod-content,
-.mashmenu .mod:hover,
-.mashmenu .menu li.level0:hover > a,
-.mashmenu .menu li.level0:hover .sub-channel li.hover a {
-  background-color: #ffffff;
-}
-.mashmenu .mlogo:hover {
-  background: none;
-}
-.mashmenu .sub-channel {
-  background-color: #c7e6f5;
-}
-.mashmenu {
-  position: relative;
-  z-index: 1;
-  margin-bottom: 25px;
-  background: #0090d9;
-}
-.mashmenu div.mlogo {
-  margin-left: 10px;
-}
-.mashmenu .menu .sub-content {
-  background-color: #ffffff;
-  padding: 20px;
-}
-.mashmenu .wrapper {
-  width: auto;
-  min-height: 400px;
-}
-.mashmenu .filters select {
-  width: 30%;
-  margin-right: 5px;
-}
-.mashmenu .filters .table-tools-actions {
-  margin: 0;
 }
 @media (max-width: 767px) {
   .login-container {
