--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -637,3 +637,20 @@
 	}
 
 }
+
+/*Properties Bar*/
+#subProps{
+    background-color: @color-info;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+    & > li > a{
+        color: @preview-grey;
+        &:hover{
+            color: @color-white;
+        }
+    }
+    & > li.active > a{
+        color: @color-dark;
+    }
+}
