--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -352,6 +352,15 @@
 			}
 		}
 	}
+	p{
+		margin: 0;
+		
+	}
+	.cke_editable{
+		&:focus{
+			outline: transparent;
+		}
+	}
 }
 .aj-imp-col-sel {
 	top: -4.6em;
