--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -8,6 +8,7 @@
 @import "fib.less";
 @import "mcq.less";
 @import "sort.less";
+@import "q-a.less";
 @import "single-question.less";
 @import "textbook.less";
 @import "chapters.less";
