--- a/HTML/assets/less/fonts.less
+++ b/HTML/assets/less/fonts.less
@@ -30,3 +30,11 @@
   src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/Sacramento-Regular.ttf) format('True Type');
   src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/Sacramento-Regular.woff) format('woff');
 }
+@font-face {
+  font-family: 'Cinzel Decorative';
+  font-style: normal;
+  font-weight: 400;
+  src: local('CinzelDecorative'), local('CinzelDecorative-Regular'), url(../fonts/CinzelDecorative-Regular.eot) format('embedded-opentype');
+  src: local('CinzelDecorative'), local('CinzelDecorative-Regular'), url(../fonts/CinzelDecorative-Regular.ttf) format('True Type');
+  src: local('CinzelDecorative'), local('CinzelDecorative-Regular'), url(../fonts/CinzelDecorative-Regular.woff) format('woff');
+}
