--- a/HTML/assets/less/mcq.less
+++ b/HTML/assets/less/mcq.less
@@ -70,7 +70,7 @@
 		margin: 4px 5px;
 		background-size: 32px;
 	}
-	p{
+	.mcq-option-text{
 		margin: 0;
 		//margin-left: 32px;
 		word-break: break-word;
@@ -79,10 +79,10 @@
 		font-size: 22px;
 		&:focus{
 			outline: none;
-			border-bottom: 2px dashed @preview-grey;
+			//border-bottom: 2px dashed @preview-grey;
 		}
 	}
-	p.placeholder{
+	.mcq-option-text.placeholder{
 		color: darken(@body-bg, 2%);
 		font-size: 18px;
 		font-weight: bold;
