--- a/HTML/assets/less/sort.less
+++ b/HTML/assets/less/sort.less
@@ -4,6 +4,7 @@
   padding: 5px;
   margin: 5px; 
   box-sizing: border-box;
+  cursor: move;
   transition-property: transform, top, left;
   &.ui-sortable-placeholder {
     visibility: visible!important;
