instructions field added for content piece post metas of content piece combined into one meta field

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -72,16 +72,17 @@
 
             </div>
             <div class="row m-b-20">
-                <div class="col-sm-4">
-                    <label class="form-label">Published by</label>
+                <div class="col-sm-8">
+                    <label class="form-label">Instructions</label>
+                    <input name="instructions" type="text" class="form-control" value="{{instructions}}" placeholder="Instructions">
+                </div>
+                <div class="col-sm-2">
+                    <label class="form-label">Published By:</label>
                     <span class="lastMod muted">{{published_by}}</span>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-2">
                     <label class="form-label">Last Modified By:</label>
                     <span class="lastMod muted">{{last_modified_by}}</span>
-                </div>
-                <div class="col-sm-4">
-
                 </div>
             </div>
         </div>
