--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
@@ -97,6 +97,13 @@
                 <div class="aj-imp-builder-title">Video</div>
             </a>
         </li>
+        <li data-element="Audio" class="hotspotable">
+            <a href="#" class="drag builder-element">
+                <i class="bicon icon-uniF112"></i>
+
+                <div class="aj-imp-builder-title">Audio</div>
+            </a>
+        </li>
         <div class="clearfix"></div>
     </ul>
 </div>
