right drawer logout css, single question full screen css

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -685,6 +685,10 @@
 		&::after{
 			clear: both;
 		}
+		.thumbnail{
+			height: 45px;
+			margin-bottom: 5px;
+		}
 		.imgthumb{
 			width: 5%;
 			//float: left;
