--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -53,6 +53,14 @@
 	}
 }
 
+.page-content.expand-page{
+	margin-left: 0;
+	.content{
+		padding: 0;
+	}
+}
+
+
 /*.answrRight{
 	background: url(../../../images/answer.png) no-repeat;
 	width: 45px;
