--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -803,6 +803,10 @@
 #all-media-region .listView::after {
   clear: both;
 }
+#all-media-region .listView .thumbnail {
+  height: 45px;
+  margin-bottom: 5px;
+}
 #all-media-region .listView .imgthumb {
   width: 5%;
 }
@@ -1221,6 +1225,12 @@ p.mcq-option-text {
 .answrMsg.alert-info h3 {
   color: #005da6;
 }
+.page-content.expand-page {
+  margin-left: 0;
+}
+.page-content.expand-page .content {
+  padding: 0;
+}
 /*.answrRight{
 	background: url(../../../images/answer.png) no-repeat;
 	width: 45px;
@@ -1510,6 +1520,22 @@ body {
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a:hover {
   background-color: #098e83 !important;
 }
+#walnutProfile .user {
+  font-size: 20px;
+  color: #aaaaaa;
+  padding: 20px 20px 5px;
+}
+#walnutProfile .appLogout {
+  padding: 5px 22px;
+  width: 100%;
+  display: block;
+  color: #ffffff;
+  border-top: 1px solid #404040;
+  border-bottom: 1px solid #404040;
+}
+#walnutProfile .appLogout:hover {
+  color: #b7b7b7;
+}
 tbody.rowlink td {
   cursor: pointer;
 }
@@ -1557,4 +1583,10 @@ textarea.error,
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: left center;
+}
+/*App Highlight Color*/
+* {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+  -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
+  outline: none !important;
 }
