--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -202,6 +202,6 @@ textarea.error, .select2-choice.error {
 /*App Highlight Color*/
 * {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
-    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
-    outline: none !important;
+    -webkit-focus-ring-color: @color-info !important; 
+    //outline: none !important;
 } 
