--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1587,6 +1587,5 @@ textarea.error,
 /*App Highlight Color*/
 * {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
-  -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
-  outline: none !important;
+  -webkit-focus-ring-color: #0090d9 !important;
 }
