--- a/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
@@ -1,12 +1,13 @@
 
 <ul class="nav nav-tabs">
-  <li class="active"><a href="#upload-region" data-toggle="tab">Upload</a></li>
-  <li><a href="#all-media-region" data-toggle="tab">All Media</a></li>
+  <li class="active all-media-tab"><a href="#all-media-region" data-toggle="tab">All Media</a></li>
+  <li class="upload-tab"><a href="#upload-region" data-toggle="tab">Upload</a></li>
+
   <!--li: a(href="#gallery-region" data-toggle="tab") Gallery-->
 </ul>
 <div class="tab-content">
-  <div id="upload-region" class="tab-pane active"></div>
-  <div id="all-media-region" class="tab-pane">
+
+  <div id="all-media-region" class="tab-pane active">
     <div id="grid-region" class="col-md-9"></div>
     <div id="edit-media-region" class="col-md-3">
       <div class="pick-image"><span class="glyphicon glyphicon-hand-left"></span>
@@ -14,6 +15,7 @@
       </div>
     </div>
   </div>
+  <div id="upload-region" class="tab-pane "></div>
   <div id="gallery-region" class="tab-pane"></div>
 </div>
 <div class="clearfix">
