--- a/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
@@ -1,3 +1,10 @@
-<a href="#" class="thumbnail">
-  <div class="imgthumb"><img src="{{sizes.thumbnail.url}}" class="img-responsive"/></div>
-  <div class="ticker"><span class="glyphicon glyphicon-ok"></span><span class="glyphicon glyphicon-minus"></span></div></a>
+{{#imagePreview}}
+    <a class="thumbnail">
+        <div class="imgthumb"><img src="{{sizes.thumbnail.url}}" class="img-responsive"/></div>
+        <div class="imaTitle"><span>{{title}}</span></div>
+        <div class="ticker">
+            <span class="glyphicon glyphicon-ok"></span>
+            <span class="glyphicon glyphicon-minus"></span>
+        </div>
+    </a>
+{{/imagePreview}}
