--- a/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
@@ -6,7 +6,7 @@
 	<!-- BEGIN ONE LEVEL MENU -->
 	
 	<!-- END ONE LEVEL MENU -->
-	<li><a id="user_logout" href="javascript://"><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a></li>
+	
 
 </ul>
 <!-- END SIDEBAR MENU -->
@@ -17,3 +17,8 @@
 <div class="clearfix"></div>
 <!-- END SIDEBAR WIDGETS --> 
 </div><div class="slimScrollBar ui-draggable" style="background: none repeat scroll 0% 0% rgb(161, 178, 189); width: 4px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 4px; z-index: 99; right: 1px; height: 698px;"></div><div class="slimScrollRail" style="width: 4px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 4px; background: none repeat scroll 0% 0% rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div></div>
+
+<div id="walnutProf" style="display: none;">
+	<div class="user">User Name</div>
+	<a id="user_logout" class="appLogout" href="javascript://" ><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a>
+</div>
