image manager styles

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -677,8 +677,16 @@
 
 /*Media Manager*/
 #all-media-region{
-	.thumbnail::after{
-		clear: both;
+	.thumbnail{
+		cursor: pointer;
+		height: 92px;
+		background-color: @preview-grey;
+		&::after{
+			clear: both;
+		}
+	}
+	.mediaSearch{
+		width: 35%;
 	}
 	.listView{
 		width: 100%;
@@ -687,11 +695,23 @@
 		}
 		.thumbnail{
 			height: 45px;
-			margin-bottom: 5px;
+			margin-bottom: 10px;
 		}
 		.imgthumb{
 			width: 5%;
-			//float: left;
+			float: left;
+			margin-right: 10px;
+		}
+		.ticker{
+			right: -5px;
+		}
+		.imaTitle{
+			font-weight: bold;
+		}
+	}
+	.col-sm-2{
+		.imaTitle{
+			display: none;
 		}
 	}
 	.single-img{
