--- a/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
@@ -10,8 +10,8 @@
   <div id="all-media-region" class="tab-pane active">
     <div id="grid-region" class="col-md-9"></div>
     <div id="edit-media-region" class="col-md-3">
-      <div class="pick-image"><span class="glyphicon glyphicon-hand-left"></span>
-        <h4>Select an Image from the library</h4>
+      <div class="pick-image p-t-50">
+        <h4><span class="glyphicon glyphicon-hand-left"></span> Select an image</h4>
       </div>
     </div>
   </div>
