misc changes for builder

--- a/HTML/assets/less/sort.less
+++ b/HTML/assets/less/sort.less
@@ -1,6 +1,7 @@
 .sort-option {
   //width: 100%;
   border: 2px solid @preview-grey;
+  border-right-width: 35px; 
   padding: 5px;
   margin: 5px; 
   box-sizing: border-box;
