--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
@@ -19,7 +19,7 @@
     </ul>
 </div>
 <h5 class="semi-bold text-center b-b b-grey p-b-10">Questions</h5>
-<div class="tools">
+<div class="qstns">
     <ul class="elements">
         <li data-element="Hotspot">
             <a class="drag builder-element">
@@ -92,14 +92,14 @@
         </li>
         <li data-element="Video" class="hotspotable">
             <a href="#" class="drag builder-element">
-                <i class="bicon icon-uniF112"></i>
+                <i class="bicon icon-uniF11E"></i>
 
                 <div class="aj-imp-builder-title">Video</div>
             </a>
         </li>
         <li data-element="Audio" class="hotspotable">
             <a href="#" class="drag builder-element">
-                <i class="bicon icon-uniF112"></i>
+                <i class="bicon icon-uniF100"></i>
 
                 <div class="aj-imp-builder-title">Audio</div>
             </a>
