CSV data inserted

--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
@@ -1,7 +1,9 @@
 <div class="col-md-3">
 </div>
 <div class="col-md-6">
+	<a style="height:30px" href="#sync">Synchronization</a>
 	<label id="directory" class="form-label bold">SD CARD</label>
+
     <ul class="nav nav-tabs" id="teacherOptns">
         <li class="active"><a href="#takeClass">Take a Class</a></li>
         <li class=""><a href="#training">Start Training</a></li>
