sync screen updates

--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -21,6 +21,10 @@
   -ms-transition: opacity 0.5s ease-in-out;
   -o-transition: opacity 0.5s ease-in-out;
 }
+.h-center {
+  margin-left: auto;
+  margin-right: auto;
+}
 .overlap-left-15 {
   position: absolute;
   left: -15px;
@@ -83,6 +87,14 @@
   src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/Sacramento-Regular.eot) format('embedded-opentype');
   src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/Sacramento-Regular.ttf) format('True Type');
   src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/Sacramento-Regular.woff) format('woff');
+}
+@font-face {
+  font-family: 'Cinzel Decorative';
+  font-style: normal;
+  font-weight: 400;
+  src: local('CinzelDecorative'), local('CinzelDecorative-Regular'), url(../fonts/CinzelDecorative-Regular.eot) format('embedded-opentype');
+  src: local('CinzelDecorative'), local('CinzelDecorative-Regular'), url(../fonts/CinzelDecorative-Regular.ttf) format('True Type');
+  src: local('CinzelDecorative'), local('CinzelDecorative-Regular'), url(../fonts/CinzelDecorative-Regular.woff) format('woff');
 }
 .creator {
   position: relative;
@@ -174,7 +186,7 @@
 }
 #toolbox .qstns ul li {
   width: 96px;
-  height: 40px;
+  padding-top: 8%;
 }
 #toolbox .qstns ul li i {
   font-size: 17px;
@@ -481,6 +493,23 @@
 .element-wrapper.hover-class:hover > .element-markup > .row > .column:last-child {
   border-right: 0;
 }
+.element-wrapper p {
+  margin: 0;
+}
+.element-wrapper .cke_editable:focus {
+  outline: transparent;
+}
+.element-wrapper .text,
+.element-wrapper .editor {
+  font-size: 22px;
+}
+.element-wrapper .text.placeholder,
+.element-wrapper .editor.placeholder {
+  color: #dfe4e8;
+  font-size: 18px;
+  font-weight: bold;
+  padding-left: 4px;
+}
 .aj-imp-col-sel {
   top: -4.6em;
   display: none;
@@ -684,6 +713,12 @@
   font-size: 40px;
   display: block;
 }
+.imagewithtext img {
+  position: relative;
+  z-index: 2;
+  margin-right: 10px;
+  cursor: pointer;
+}
 .imagewithtext p {
   margin: 0;
 }
@@ -717,10 +752,6 @@
 .aj-imp-upload-media .bicon {
   font-size: 50px;
   color: #e5e9ec;
-}
-/*Sort*/
-.sort-option {
-  cursor: move;
 }
 /*Editor popup*/
 .cke_dialog_body .cke_dialog_title {
@@ -766,6 +797,70 @@
 }
 #subProps > li.active > a {
   color: #1b1e24;
+}
+/*Media Manager*/
+#all-media-region .thumbnail {
+  cursor: pointer;
+  height: 92px;
+  background-color: #f3f3f3;
+}
+#all-media-region .thumbnail::after {
+  clear: both;
+}
+#all-media-region .mediaSearch {
+  width: 35%;
+}
+#all-media-region .listView {
+  width: 100%;
+}
+#all-media-region .listView::after {
+  clear: both;
+}
+#all-media-region .listView .thumbnail {
+  height: 45px;
+  margin-bottom: 10px;
+}
+#all-media-region .listView .imgthumb {
+  width: 5%;
+  float: left;
+  margin-right: 10px;
+}
+#all-media-region .listView .ticker {
+  right: -5px;
+}
+#all-media-region .listView .imaTitle {
+  font-weight: bold;
+}
+#all-media-region .col-sm-2 .imaTitle {
+  display: none;
+}
+#all-media-region .single-img {
+  position: relative;
+}
+#all-media-region .ticker {
+  position: absolute;
+  top: -7px;
+  right: 5px;
+  color: #ffffff;
+  padding: 3px 4px;
+  border-radius: 2px;
+  background: #0090d9;
+  display: none;
+}
+#all-media-region .ui-selected a {
+  border: 2px solid #0090d9;
+}
+#all-media-region .ui-selected .ticker {
+  display: block;
+}
+#all-media-region .ui-selected .ticker .glyphicon-minus {
+  display: none;
+}
+#all-media-region .ui-selected .ticker:hover .glyphicon-minus {
+  display: inline-block;
+}
+#all-media-region .ui-selected .ticker:hover .glyphicon-ok {
+  display: none;
 }
 /*input[type=checkbox].mcq-option-select {
 	display:none;
@@ -984,17 +1079,16 @@ p.mcq-option-text {
   margin: 4px 5px;
   background-size: 32px;
 }
-.mcq-option p {
+.mcq-option .mcq-option-text {
   margin: 0;
   word-break: break-word;
   overflow: hidden;
   font-size: 22px;
 }
-.mcq-option p:focus {
+.mcq-option .mcq-option-text:focus {
   outline: none;
-  border-bottom: 2px dashed #f3f3f3;
 }
-.mcq-option p.placeholder {
+.mcq-option .mcq-option-text.placeholder {
   color: #dfe4e8;
   font-size: 18px;
   font-weight: bold;
@@ -1023,9 +1117,11 @@ p.mcq-option-text {
 }
 .sort-option {
   border: 2px solid #f3f3f3;
+  border-right-width: 35px;
   padding: 5px;
   margin: 5px;
   box-sizing: border-box;
+  cursor: move;
   transition-property: transform, top, left;
 }
 .sort-option.ui-sortable-placeholder {
@@ -1084,21 +1180,19 @@ p.mcq-option-text {
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
 
 }
-.sort-option p {
+.sort-option .sort-option-text {
   margin: 0;
   word-break: break-word;
   overflow: hidden;
   font-size: 22px;
 }
-.sort-option p:focus {
+.sort-option .sort-option-text:focus {
   outline: none;
-  border-bottom: 2px dashed #f3f3f3;
 }
-.sort-option p.placeholder {
+.sort-option .sort-option-text.placeholder {
   color: #dfe4e8;
   font-size: 18px;
   font-weight: bold;
-  border: 2px dashed #f3f3f3;
   padding-left: 4px;
 }
 .ui-state-highlight {
@@ -1108,6 +1202,15 @@ p.mcq-option-text {
 /*Preview*/
 #content-board .sort-option .number {
   display: none;
+}
+.teacher-question-row > span {
+  font-size: 18px;
+  display: block;
+  font-family: Georgia;
+  font-family: 'Cinzel Decorative';
+}
+.teacher-question-row > span:first-letter {
+  font-size: 40px;
 }
 .hashtags {
   font-size: 13px;
@@ -1135,6 +1238,8 @@ p.mcq-option-text {
 }
 #content-board .element-wrapper {
   border: none;
+  padding: 0 7px;
+  margin: 2px 0 15px;
 }
 .answrMsg.alert-success h3 {
   color: #007366;
@@ -1144,6 +1249,12 @@ p.mcq-option-text {
 }
 .answrMsg.alert-info h3 {
   color: #005da6;
+}
+.page-content.expand-page {
+  margin-left: 0;
+}
+.page-content.expand-page .content {
+  padding: 0;
 }
 /*.answrRight{
 	background: url(../../../images/answer.png) no-repeat;
@@ -1434,6 +1545,22 @@ body {
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a:hover {
   background-color: #098e83 !important;
 }
+#walnutProfile .user {
+  font-size: 20px;
+  color: #aaaaaa;
+  padding: 20px 20px 5px;
+}
+#walnutProfile .appLogout {
+  padding: 5px 22px;
+  width: 100%;
+  display: block;
+  color: #ffffff;
+  border-top: 1px solid #404040;
+  border-bottom: 1px solid #404040;
+}
+#walnutProfile .appLogout:hover {
+  color: #b7b7b7;
+}
 tbody.rowlink td {
   cursor: pointer;
 }
@@ -1481,4 +1608,9 @@ textarea.error,
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: left center;
+}
+/*App Highlight Color*/
+* {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+  -webkit-focus-ring-color: #0090d9 !important;
 }
