--- a/HTML/assets/less/mixins.less
+++ b/HTML/assets/less/mixins.less
@@ -546,6 +546,11 @@
        -o-transition: opacity .5s ease-in-out;
 }
 
+.h-center{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .overlap-left-15{
   position: absolute;
   left: -15px;
