--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -21,6 +21,10 @@
   -ms-transition: opacity 0.5s ease-in-out;
   -o-transition: opacity 0.5s ease-in-out;
 }
+.h-center {
+  margin-left: auto;
+  margin-right: auto;
+}
 .overlap-left-15 {
   position: absolute;
   left: -15px;
