--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -22,7 +22,7 @@
 				
 				<!-- BEGIN MOBILE CHAT TOGGLER -->
 				<li style="display:block" id="portrait-chat-toggler" class="dropdown">
-					<a class="chat-menu-toggle" href="#sidr">
+					<a class="right-menu" href="#walnutProfile">
 						<div class="iconset top-chat-white"></div>
 					</a>
 				</li>
@@ -40,4 +40,10 @@
 		<!-- END CONTENT HEADER --> 
 	</div>
 	<!-- END TOP NAVIGATION BAR --> 
+</div>
+
+
+<div id="walnutProfile">
+	<div id="app_username" class="user">User Name</div>
+	<a id="app_logout" class="appLogout" href="javascript://" ><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a>
 </div>
