--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -25,6 +25,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+.block {
+  display: block;
+}
 .overlap-left-15 {
   position: absolute;
   left: -15px;
@@ -1498,6 +1501,7 @@ h3.time {
 body {
   background-color: #e5e9ec;
   overflow-y: scroll;
+  height: 100%;
 }
 #site_main_container {
   opacity: 0;
