--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -25,6 +25,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+.block {
+  display: block;
+}
 .overlap-left-15 {
   position: absolute;
   left: -15px;
@@ -267,7 +270,8 @@
 .docket-body label {
   color: #777a80;
 }
-.docket-body select.marks {
+.docket-body select.marks,
+.docket-body select.blanks {
   width: auto;
 }
 .docket-body .radio label {
@@ -783,6 +787,10 @@
   background: #006ea6;
 }
 /*Properties Bar*/
+#options-bar-region label {
+  font-size: 13px;
+  line-height: 10px;
+}
 #subProps {
   background-color: #0090d9;
   -webkit-border-radius: 4px;
@@ -1498,6 +1506,7 @@ h3.time {
 body {
   background-color: #e5e9ec;
   overflow-y: scroll;
+  height: 100%;
 }
 #site_main_container {
   opacity: 0;
