--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -5,7 +5,7 @@
 <form name="contentpiece-settings">
     <div class="tab-content ">
         <div class="tab-pane active" id="settings">
-            <div class="row m-b-20">
+            <div class="row m-b-15">
                 <div class="col-sm-4">
                     <label class="form-label">Textbook</label>
                     <select required name="term_ids[textbook]" id="subs" class="form-control select2" >
@@ -25,7 +25,7 @@
                     <input name="post_tags" type="text" data-role="tagsinput" value="{{post_tags}}" class="tagsinput" placeholder="Type Answer and press Enter" />
                 </div>
             </div>
-            <div class="row m-b-20">
+            <div class="row m-b-15">
                 <div class="col-sm-4">
                     <label class="form-label">Section <span class="muted small pull-right"> Select a Chapter first</span></label>
                     <select name="term_ids[sections]" id="secs" class="form-control select2" multiple="">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row m-b-20">
+            <div class="row m-b-15">
                 <div class="col-sm-4">
                     <label class="form-label">Question Type</label>
                     <select required name="question_type" id="qType" class="form-control select2" >
@@ -71,7 +71,7 @@
                 </div>
 
             </div>
-            <div class="row m-b-20">
+            <div class="row">
                 <div class="col-sm-8">
                     <label class="form-label">Instructions</label>
                     <input name="instructions" type="text" class="form-control" value="{{instructions}}" placeholder="Instructions">
