--- a/wp-content/themes/walnut/walnut/dev/js/apps/media/edit-media/templates/form.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media/edit-media/templates/form.html
@@ -17,5 +17,5 @@
     <label for="">Description</label>
     <input type="text" placeholder="" value="{{description}}" class="form-control"/>
   </div>
-  <button type="button" class="btn btn-primary">Save</button>
+  <button type="button" class="btn btn-primary">Save Details</button>
 </form>
