--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class="pull-right m-r-30">
-                    <p class="bold small-text"> Module Time</p>
+                    <p class="bold small-text"> Completed Time</p>
                     <h4 class="text-grey m-t-0 m-b-0 semi-bold time"> <i class="fa fa-clock-o"></i> {{moduleTime}}</h4>
                 </div>
 
